[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=1]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=4]
[ext_resource path="res://Menus/store/store_menu.gd" type="Script" id=5]
[ext_resource path="res://new_font.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
shadow_size = 6

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.25098, 0.513726, 0.0313726, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.768627, 0.772549, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.223529, 0.454902, 0.0901961, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
shadow_size = 6

[node name="store_menu" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -385.0
margin_top = -292.5
margin_right = 385.0
margin_bottom = 292.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -294.5
margin_top = -235.0
margin_right = 294.5
margin_bottom = 235.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sw" type="Button" parent="Panel/VBoxContainer"]
margin_right = 589.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Select Weapon"

[node name="ss" type="Button" parent="Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 589.0
margin_bottom = 210.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Select Skin"

[node name="bw" type="Button" parent="Panel/VBoxContainer"]
margin_top = 260.0
margin_right = 589.0
margin_bottom = 340.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Buy Weapons"

[node name="bs" type="Button" parent="Panel/VBoxContainer"]
margin_top = 390.0
margin_right = 589.0
margin_bottom = 470.0
rect_min_size = Vector2( 100, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Buy Skins"

[node name="back" type="Button" parent="."]
anchor_left = 0.084
anchor_top = 0.915
anchor_right = 0.084
anchor_bottom = 0.915
margin_left = -54.52
margin_top = -19.8
margin_right = 55.48
margin_bottom = 20.2
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="cash" type="Button" parent="."]
anchor_left = 0.911
anchor_top = 0.472
anchor_right = 0.911
anchor_bottom = 0.472
margin_left = -81.0801
margin_top = -66.84
margin_right = 81.9199
margin_bottom = 66.16
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
text = "$$"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.477
anchor_right = 0.5
anchor_bottom = 0.477
margin_left = -301.0
margin_top = -95.44
margin_right = 270.0
margin_bottom = 95.56
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.5
margin_top = -89.5
margin_right = 279.5
margin_bottom = 89.5
custom_fonts/font = ExtResource( 7 )
text = "You Got $200"
[connection signal="pressed" from="Panel/VBoxContainer/sw" to="." method="_on_sw_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ss" to="." method="_on_ss_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/bw" to="." method="_on_bw_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/bs" to="." method="_on_bs_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="cash" to="." method="_on_cash_pressed"]
